Move config to options

--- a/default.html
+++ b/default.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-  <title> Hello Extensions </title>
-  <script src="config.js"></script>
-  <script src="default.js"></script>
+    <title>Read It Later</title>
+    <script src="default.js"></script>
 </head>
 
 <body>
-  <span id="page">Saving...</span>
+    <span id="page">Saving...</span>
 </body>
 
 </html>
